# claude-developer-hub

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: db.py  main.py  sse.py
backend/app/config/: __init__.py  loader.py  schema.py
backend/app/migrations/: 001_initial.sql  002_pr_state.sql  003_pr_state_terminal_states.sql  004_pr_state_unresolved_comments.sql  005_worktree_status_code_on_disk.sql  006_pr_state_fk_repair.sql  007_worktree_pr_author.sql  008_worktree_notes.sql  009_persistent_inbox_bookmarks.sql  010_authored_pr_notes.sql  011_terminal_session.sql  012_terminal_session_fk_repair.sql  013_unified_pr.sql  014_drop_inbox.sql  015_todo.sql
backend/app/models/: authored_pr.py  bookmark.py  inbox.py  pr.py  worktree.py
backend/app/routes/: authored_prs.py  bookmarks.py  config.py  inbox.py  refresh.py  repos.py  skills.py  token_usage.py  workspace.py  workspaces.py  worktrees.py
backend/app/services/: authored_poll.py  authored_pr_notes_db.py  authored_prs.py  bookmark_db.py  bookmark_poll.py  gh_cli.py  gh_identity.py  git_cli.py  inbox_db.py  inbox_poll.py  inbox_search.py  inbox_stack.py  iterm_send.py  iterm_spawn.py  iterm_supervisor.py  pr_db.py  pr_enrichment_poll.py  pr_search.py  pr_state.py  pr_state_poll.py  pull_down.py  repos_index.py  sidecar.py  worktree.py  worktree_import.py
backend/app/services/terminal/: __init__.py  applescript.py  ghostty.py
backend/app/widgets/: __init__.py
backend/app/widgets/todo/: __init__.py  models.py  routes.py  store.py
backend/tests/: conftest.py  test_api_compat.py  test_authored_poll.py  test_authored_prs.py  test_bookmarks.py  test_config.py  test_db.py  test_file_view.py  test_gh_identity.py  test_health.py  test_inbox.py  test_iterm.py  test_iterm_send.py  test_pr.py  test_pr_state.py  test_repo_candidates.py  test_repos.py  test_sidecar.py  test_skills.py  test_terminal_ghostty.py  test_todo_widget.py  test_token_usage.py  test_workspace.py  test_workspaces.py  test_worktree_import.py  test_worktrees.py
backend/tests/fixtures/: __init__.py  bookmark.py  config.py  inbox.py  iterm.py  pr.py  pr_state.py  worktree.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+69 files in other folders)
