[project]
name = "cdh-backend"
version = "0.1.0"
description = "Claude Developer Hub backend (FastAPI)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "iterm2>=2.7",
    "httpx>=0.28",
    "sse-starlette>=2.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = [
    # Sync pathlib in async fns — sub-ms on local filesystem; not worth
    # introducing aiofiles/anyio.path for a single-user local app.
    "ASYNC240",
    # `timeout` param: intentional so tests can override; the function
    # uses a manual deadline loop instead of asyncio.timeout.
    "ASYNC109",
    # `while True: await sleep(N)`: intentional fallback wait pattern in
    # the iTerm2 supervisor (we want cancellation, not Event-driven wakeup).
    "ASYNC110",
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately assert that "any exception is raised" when probing
# Pydantic validation errors that surface as ValidationError but also
# get wrapped in pytest.raises occasionally.
"tests/**" = ["B017"]

[tool.mypy]
python_version = "3.13"
strict = true
